--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-check-box": "^2.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
