--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-check-box": "^2.1.7"
+    "react-native-check-box": "^2.1.7",
+    "react-navigation-tabs": "^2.8.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
