--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^1.2.7",
     "react-navigation": "^4.3.3",
     "react-navigation-tabs": "^2.8.7"
   },
