--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native": "0.61.5",
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^1.2.7",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-screens": "^2.4.0",
     "react-navigation": "^4.3.3",
     "react-navigation-tabs": "^2.8.7"
   },
