--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "ProInstallIOSv2",
   "version": "0.0.1",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
     "expo": "^36.0.2",
     "expo-camera": "^8.0.0",
     "expo-image-picker": "^8.0.2",
     "react": "16.9.0",
+    "react-dom": "^16.13.1",
     "react-native": "0.61.5",
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.7.1",
     "react-native-screens": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
+    "react-navigation-stack": "^2.3.6",
     "react-navigation-tabs": "^2.8.7"
   },
   "devDependencies": {
